--- a/package/lean/r8125/Makefile
+++ b/package/lean/r8125/Makefile
@@ -24,7 +24,8 @@ define KernelPackage/r8125
   TITLE:=Driver for Realtek r8125 chipsets
   SUBMENU:=Network Devices
   VERSION:=$(LINUX_VERSION)+$(PKG_VERSION)-$(BOARD)-$(PKG_RELEASE)
-  FILES:= $(PKG_BUILD_DIR)/src/r8125.ko
+  DEPENDS:=@PCI_SUPPORT +kmod-mii +kmod-phy-realtek
+  FILES:= $(PKG_BUILD_DIR)/r8125.ko
   AUTOLOAD:=$(call AutoProbe,r8125)
 endef
 
@@ -33,7 +34,7 @@ define Package/r8125/description
 endef
 
 define Build/Compile
-	+$(KERNEL_MAKE) M=$(PKG_BUILD_DIR)/src modules
+	$(KERNEL_MAKE) M=$(PKG_BUILD_DIR) modules
 endef
 
 $(eval $(call KernelPackage,r8125))
