--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -130,8 +130,16 @@ jobs:
           name: OpenWrt_package
           path: ./artifact/package/
 
-      - name: Deliver firmware
-        uses: actions/upload-artifact@v4
+      # - name: Deliver firmware
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: OpenWrt_firmware
+      #     path: ./bin/targets/
+
+      - name: Upload release asset
+        uses: svenstaro/upload-release-action@v2
         with:
-          name: OpenWrt_firmware
-          path: ./bin/targets/
+          repo_token: ${{ secrets.YOUR_TOKEN }}
+          file: ./artifact/firmware/*
+          tag: ${{ env.NOW }}
+          file_glob: true
